--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="gist/style.css" />
-    <title>SCSS</title>
+    <title>Easybank</title>
   </head>
   <body>
+    <header class="header">
+      <nav class="flex jc-sb ai-c">
+        <a href="/" class="header__logo">
+          <img src="assets/logo.svg" alt="easybank" />
+        </a>
 
+        <a href="#" class="header__menu hide-for-desktop">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+
+        <div class="header__links hide-for-mobile">
+          <a href="#">Home</a><a href="#">About</a><a href="#">Contact</a><a href="#">Blog</a><a href="#">Career</a>
+        </div>
+
+        <div class="button hide-for-mobile">Request Invite</div>
+      </nav>
+    </header>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nulla sequi porro est earum maiores! Ipsum nostrum fugit mollitia eaque magnam unde autem quas, nesciunt exercitationem perferendis, maiores repudiandae fugiat facere nulla maxime quae?</p>
 
     <script src="/app/js/script.js"></script>
   </body>
-</html>
+</html
