--- a/index.html
+++ b/index.html
@@ -20,14 +20,31 @@
         </a>
 
         <div class="header__links hide-for-mobile">
-          <a href="#">Home</a><a href="#">About</a><a href="#">Contact</a><a href="#">Blog</a><a href="#">Career</a>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+          <a href="#">Blog</a>
+          <a href="#">Career</a>
         </div>
 
         <div class="button hide-for-mobile">Request Invite</div>
       </nav>
     </header>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nulla sequi porro est earum maiores! Ipsum nostrum fugit mollitia eaque magnam unde autem quas, nesciunt exercitationem perferendis, maiores repudiandae fugiat facere nulla maxime quae?</p>
+
+    <div class="hero">
+      <div class="hero__image"></div>
+
+      <div class="hero__text section">
+        <h1>Next generation digital banking</h1>
+        <p>
+          Take your financial life online. Your Easybank account will be a
+          one-stop-shop for spending, saving, budgeting, investing and much
+          more.
+        </p>
+        <a href="#" class="button">Request Invite</a>
+      </div>
+    </div>
 
     <script src="/app/js/script.js"></script>
   </body>
-</html
+</html>
